--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <div class="mr-auto"></div>
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">INDEX<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="../Bootstrap-Portfolio/index.html">INDEX<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">CONTACT</a>
+        <a class="nav-link" href="../Bootstrap-Portfolio/contact.html">CONTACT</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">PORTFOLIO</a>
+        <a class="nav-link" href="../Bootstrap-Portfolio/portfolio.html">PORTFOLIO</a>
       </li>
     </ul>
   </div>
