--- a/portfolio.html
+++ b/portfolio.html
@@ -16,13 +16,14 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">INDEX</a>
+        <a class="nav-link" href="../Bootstrap-Portfolio/index.html">INDEX</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">CONTACT</a>
+        <a class="nav-link" href="../Bootstrap-Portfolio/contact.html">CONTACT</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="#">PORTFOLIO<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="../Bootstrap-Portfolio/portfolio.html">PORTFOLIO<span
+            class="sr-only">(current)</span></a>
       </li>
     </ul>
   </div>
