--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="mr-auto"></div>
     <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link" href="../Bootstrap-Portfolio/index.html">INDEX</a>
