--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>index</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet2" type="text/css" href="stylesheet.css">
 </head>
 <!--Navigation Bar from Bootstrap-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -32,44 +33,57 @@
 <body>
   <div class="container">
     <div class="row1">
-      <div class="col">ABOUT ME</div>
-    </div>
-    <div class="row2">
-      <div class="col-4">
-        <img src="../Bootstrap-Portfolio/Images/MattProfilePic3.jpg" class="rounded float-left" alt="...">
-      </div>
-      <div class="col-8">
-        <p>
-          <strong>Entrepreneur, Traveler, Father, Surfer, and Language Learner:</strong>
-          In June of 2019 after a long career in mortgage and non-profit housing development, my wife and 8-year-old son
-          decided to take a year off and travel the world for a year. I had previously started a small “Healthy Vending”
-          company as “side gig” with several machines located in various schools in Jacksonville, Florida and together
-          by renting our home on Airbnb, teaching English to Chinese children online, and a small amount of savings as a
-          backup, we hoped to come close to breaking even financially each month and maybe even become able to fund our
-          travels indefinitely.
-
-          While we were living in our first stop in Cuenca, Ecuador we came across many full-time travelers that “code”
-          and work remotely. At their suggestion, I began to investigate a few languages like JavaScript, HTML, and CSS
-          and found that the learning method was very similar to the language learning that I had been doing to prepare
-          for our travels. I also loved the challenge and the process of coding, but soon found that I needed a bit more
-          structure in order to really wrap my arms around the process. That is where UCF Coding Bootcamp came in. Now
-          because “I didn’t know what I didn’t know”, I am finding that this has not been a process of a career change,
-          but more of a career enhancement because with the changing mortgage and development environment, I can take my
-          previous expertise and layer coding on top to secure employment in the future while allowing myself to work
-          remotely and continue to travel. I love the work and look forward to exploring this new world of coding and
-          our real “geographic” world in the process.
-        </p>
-      </div>
-      <div class="rowfooter text-center">
-        <div class="col-12">
-          <nav class="navbar navbar-light bg-light">
-            <span class="navbar-text">
-            </span>
-            <div class="mx-auto" style="width: 200px;">
-              Written by Matthew Bowler
-            </div>
-          </nav>
+      <div class="col-sm-8">
+        <div class="page header">
+          <h1>ABOUT ME</h1>
         </div>
+        <div class="row2">
+          <div class="col-4">
+            <img src="../Bootstrap-Portfolio/Images/MattProfilePic3.jpg" class="rounded float-left" alt="...">
+          </div>
+          <div class="col-8">
+          </div>
+          <p>
+            <strong>Entrepreneur, Traveler, Father, Surfer, and Language Learner:</strong>
+            In June of 2019 after a long career in mortgage and non-profit housing development, my wife and 8-year-old
+            son
+            decided to take a year off and travel the world for a year. I had previously started a small “Healthy
+            Vending”
+            company as “side gig” with several machines located in various schools in Jacksonville, Florida and
+            together
+            by renting our home on Airbnb, teaching English to Chinese children online, and a small amount of savings
+            as a
+            backup, we hoped to come close to breaking even financially each month and maybe even become able to fund
+            our
+            travels indefinitely.
+
+            While we were living in our first stop in Cuenca, Ecuador we came across many full-time travelers that
+            “code”
+            and work remotely. At their suggestion, I began to investigate a few languages like JavaScript, HTML, and
+            CSS
+            and found that the learning method was very similar to the language learning that I had been doing to
+            prepare
+            for our travels. I also loved the challenge and the process of coding, but soon found that I needed a bit
+            more
+            structure in order to really wrap my arms around the process. That is where UCF Coding Bootcamp came in.
+            Now
+            because “I didn’t know what I didn’t know”, I am finding that this has not been a process of a career
+            change,
+            but more of a career enhancement because with the changing mortgage and development environment, I can
+            take my
+            previous expertise and layer coding on top to secure employment in the future while allowing myself to
+            work
+            remotely and continue to travel. I love the work and look forward to exploring this new world of coding
+            and
+            our real “geographic” world in the process.
+          </p>
+        </div>
+        <div class="rowfooter text-center">
+          <div class="col-12">
+            <nav class="navbar fixed-bottom navbar-light bg-light">
+              <a class="navbar-brand" href="#">Written By Matthew Bowler</a>
+            </nav>
+          </div>
 </body>
 
 </html>
