--- a/portfolio.html
+++ b/portfolio.html
@@ -5,8 +5,10 @@
   <meta charset="utf-8">
   <title>portfolio</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet2" type="text/css" href="stylesheet.css">
 </head>
 <!--Navigation Bar from Bootstrap-->
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">MATTHEW BOWLER</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
@@ -33,45 +35,48 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-sm">
-        <img src="https://i.picsum.photos/id/859/200/300.jpg" alt="random 1" style="width:100%">
-      </div>
-      <div class="col-sm">
-        <img src="https://i.picsum.photos/id/1063/200/300.jpg" alt="random 2" style="width:100%">
-      </div>
-      <div class="col-sm">
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm">
-        <img src="https://i.picsum.photos/id/823/200/300.jpg" alt="random 3" style="width:100%">
-      </div>
-      <div class="col-sm">
-        <img src="https://i.picsum.photos/id/894/200/300.jpg" alt="random 4" style="width:100%">
-      </div>
-      <div class="col-sm">
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm">
-        <img src="https://i.picsum.photos/id/505/200/300.jpg" alt="random 5" style="width:100%">
-      </div>
-      <div class="col-sm">
-      </div>
-      <div class="col-sm">
-      </div>
-    </div>
-  </div>
-  <div class="rowfooter text-center">
-    <div class="col-12">
-      <nav class="navbar navbar-light bg-light">
-        <span class="navbar-text">
-        </span>
-        <div class="mx-auto" style="width: 200px;">
-          Written by Matthew Bowler
+      <div class="col-sm-8">
+        <div class="page header">
+          <h1>PORTFOLIO</h1>
         </div>
-      </nav>
-    </div>
+        <div class="row">
+          <div class="col-sm">
+            <img src="https://i.picsum.photos/id/859/200/300.jpg" alt="random 1" style="width:100%">
+          </div>
+          <div class="col-sm">
+            <img src="https://i.picsum.photos/id/1063/200/300.jpg" alt="random 2" style="width:100%">
+          </div>
+          <div class="col-sm">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm">
+            <img src="https://i.picsum.photos/id/823/200/300.jpg" alt="random 3" style="width:100%">
+          </div>
+          <div class="col-sm">
+            <img src="https://i.picsum.photos/id/894/200/300.jpg" alt="random 4" style="width:100%">
+          </div>
+          <div class="col-sm">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm">
+            <img src="https://i.picsum.photos/id/505/200/300.jpg" alt="random 5" style="width:100%">
+          </div>
+          <div class="col-sm">
+          </div>
+          <div class="col-sm">
+          </div>
+        </div>
+      </div>
+      <div class="rowfooter text-center">
+        <div class="col-12">
+          <div class="rowfooter text-center">
+            <div class="col-12">
+              <nav class="navbar fixed-bottom navbar-light bg-light">
+                <a class="navbar-brand" href="#">Written By Matthew Bowler</a>
+              </nav>
+            </div>
 </body>
 
 </html>
