linked linked in page and second CSS page

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <title>index</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet2" type="text/css" href="stylesheet.css">
+  <link rel="stylesheet" href="CSS/stylesheet.css">
 </head>
 <!--Navigation Bar from Bootstrap-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">MATTHEW BOWLER</a>
+  <a class="navbar-branda" href="https://www.linkedin.com/in/matthew-bowler-5367462a/">MATTHEW BOWLER</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -34,7 +34,7 @@
   <div class="container">
     <div class="row1">
       <div class="col-sm-8">
-        <div class="page header">
+        <div class="page-header">
           <h1>ABOUT ME</h1>
         </div>
         <div class="row2">
@@ -78,12 +78,14 @@
             our real “geographic” world in the process.
           </p>
         </div>
+    
         <div class="rowfooter text-center">
           <div class="col-12">
             <nav class="navbar fixed-bottom navbar-light bg-light">
-              <a class="navbar-brand" href="#">Written By Matthew Bowler</a>
+              <a class="navbar-brand" href="https://www.linkedin.com/in/matthew-bowler-5367462a/">Written By Matthew Bowler</a>
             </nav>
           </div>
+      
 </body>
 
 </html>
