--- a/contact.html
+++ b/contact.html
@@ -6,11 +6,11 @@
   <meta charset="utf-8">
   <title>contact</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet2" type="text/css" href="stylesheet.css">
+  <link rel="stylesheet" href="CSS/stylesheet.css">
 </head>
 <!--Navigation Bar from Bootstrap-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">MATTHEW BOWLER</a>
+  <a class="navbar-branda" href="#">MATTHEW BOWLER</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -35,7 +35,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-8">
-        <div class="page header">
+        <div class="page-header">
           <h1>CONTACT</h1>
         </div>
 
