--- a/index.html
+++ b/index.html
@@ -51,17 +51,18 @@
             together with renting our home on Airbnb, teaching English to Chinese children online, and a small amount of savings
             as a backup, we hoped to come close to breaking even financially each month and maybe even become able to fund
             our travels indefinitely.
-
+            <br>
             While we were living in our first stop in Cuenca, Ecuador we came across many full-time travelers that
             “code” and work remotely. At their suggestion, I began to investigate a few languages like JavaScript, HTML, and
             CSS found that the learing process was very similar to I had been doing to
             prepare for our travels. I also loved the challenge and the process of coding, but soon found that I needed a bit
-            more structure in order to really wrap my arms around the process and this is where UCF Coding Bootcamp came in.
+            more structure in order to really wrap my arms around the process and this is where UCF Coding Bootcamp came in. I love 
+            work and I am looking forward to seeing where it takes me while exploring the world.
             
-            I am finding that this has not been a process of a career change, but more of a career enhancement because with the changing mortgage and development environment, I can
-            take my previous expertise and layer coding on top to secure employment in the future while allowing myself to
-            work remotely and continue to travel. I love the work and look forward to exploring this new world of coding
-            and our real “geographic” world in the process.
+            <br>
+            <br>
+            <br>
+            <br>
           </p>
         </div>
     
