--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <title>contact</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="CSS/stylesheet.css">
+  <link rel="stylesheet" href="/stylesheet.css">
 </head>
 <!--Navigation Bar from Bootstrap-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
