--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>portfolio</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/stylesheet.css">
+  <link rel="stylesheet" href="stylesheet.css">
 </head>
 <!--Navigation Bar from Bootstrap-->
 
