--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </nav>
 
 <body>
-  <div class="container">
+  <div class="container-fluid">
     <div class="row1">
       <div class="col-sm-8">
         <div class="page-header">
@@ -65,8 +65,7 @@
             <br>
           </p>
         </div>
-    
-        <div class="rowfooter text-center">
+        <div class="nav justify-content-center">
           <div class="col-12">
             <nav class="navbar fixed-bottom navbar-light bg-light">
               <a class="navbar-brand" href="https://www.linkedin.com/in/matthew-bowler-5367462a/">Written By Matthew Bowler</a>
