file change to link

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
         </div>
         <div class="row">
           <div class="col-sm">
-           <a href="https://mbowler03.github.io/unit-4-game/">Crystal Game<img src="../Bootstrap-Portfolio/Images/ruby.jpg" alt="random 1" style="width:100%">
+           <a href="https://mbowler03.github.io/unit-4-game/"><img src="../Bootstrap-Portfolio/Images/Ruby.jpg" alt="random 1" style="width:100%">
           </div>
           <div class="col-sm">
             <img src="https://i.picsum.photos/id/1063/200/300.jpg" alt="random 2" style="width:100%">
